# sample-distutils2-project

./: .gitignore  README.rst  setup.cfg
sample1/: setup.cfg
sample1/sample1/: sample1.py
sample2/: setup.cfg
sample2/sample2/: sample2.py
