[metadata]
name = sample-distutils2-project
version = 1.1.0
summary = Sample Distutils2 Project
download_url = UNKNOWN
home_page = http://sample.example.com
author = Sample Author
author_email = sample@example.com
classifier = Development Status :: 1 - Planning

[files]
packages = sample-distutils2-project

resources =

